@@ -67,7 +67,7 @@
  OmegaT 3.5.3 update 1
 ----------------------------------------------------------------------
    3 Enhancements
-   4 Bug fixes
+   5 Bug fixes
    2 Localisation updates
 ----------------------------------------------------------------------
 3.5.3 update 1 vs 3.5.3
@@ -95,6 +95,9 @@ stop the calculations
 
   - An error was fixed with -Dhttp.proxyHost and -Dhttp.proxyPort in 
 Linux kaptain launcher
+
+  - When using the line length limit in the Text filter, a trailing space
+remained at the end of lines when the line was cut on a space
 
   Localisation Updates:
 
